--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "./node_modules/.bin/nodemon app.js --ignore 'public/**/*'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,5 +24,8 @@
     "express-session": "^1.12.1",
     "kenobi": "^0.2.1",
     "multer": "^1.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.8.1"
   }
 }
