--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.13.3",
     "express-session": "^1.12.1",
     "kenobi": "^0.2.1",
+    "mongoose": "^4.3.1",
     "multer": "^1.1.0"
   },
   "devDependencies": {
