--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.8.1"
+    "nodemon": "^1.8.1",
+    "jake": "latest"
   }
 }
