--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/nodemon app.js --ignore 'public/**/*'",
+    "seed": "jake -f tasks/seed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
