--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "multer": "^1.1.0"
   },
   "devDependencies": {
-    "jake": "latest",
     "nodemon": "^1.8.1",
-    "typeahead.js": "^0.11.1"
+    "jake": "latest"
   }
 }
